Test: Adjusted report template to changes
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -593,6 +593,19 @@
     // JavaScript used to power the Nextflow Report Template output.
 
     /**
+     * Shift a Date by x hours
+     *
+     * @param {*} timeString The Date in String format
+     * @param {*} shift The shift (e.g. +/-10)
+     * @returns The shifted date as a String
+     */
+    function shiftHours(timeString, shift) {
+    const date = new Date(timeString);
+    date.setHours(date.getHours() + shift);
+    return date.toISOString().slice(0, 16);
+    }
+
+    /**
      * Decides whether raw or readable values are to be displayed
      *
      * @param {*} data The data (number/string/...)
@@ -724,9 +737,88 @@
       Plotly.newPlot('co2e-total-plot', plot_data_total, layout);
       Plotly.newPlot('co2e-non-cached-plot', plot_data_non_cached, layout);
 
-      //
-      // Table creation functions
-      //
+
+  //
+  // Carbon intensity plot
+  //
+
+  // CI is defined in an hourly context, therefore we can add one additional point at the end to indicate the continuation
+  if (window.timeCiRecords.size > 0) {
+    // Add main line of CI values
+    var timestamps = Array.from( window.timeCiRecords.keys() )
+    var ciValues = Array.from( window.timeCiRecords.values() )
+
+    var ci_plot_data = [
+      // Add timestamps + CI values to plot
+      {
+        name: "Carbon intensity",
+        x: timestamps, y: ciValues,
+        type: 'scatter', legendgroup: "Carbon intensity"
+      },
+
+      // Add 1 day to first and last point
+      {
+        name: "Carbon intensity prepend",
+        x: [shiftHours(timestamps[0], -24), timestamps[0]],
+        y: [ciValues[0], ciValues[0]],
+        type: 'scatter', legendgroup: "Carbon intensity", mode: "lines", line: {dash: 'dot'},
+      },
+       // Add 1 day to first and last point
+      {
+        name: "Carbon intensity append",
+        x: [shiftHours(timestamps[timestamps.length - 1], 24),timestamps[timestamps.length - 1]],
+        y: [ciValues[ciValues.length - 1], ciValues[ciValues.length - 1]],
+        type: 'scatter', legendgroup: "Carbon intensity", mode: "lines", line: {dash: 'dot'},
+      }
+    ];
+
+    // Add CPU load of tasks
+    var tasksStart = null;
+    var tasksEnd = null;
+    for (let task of window.data.trace) {
+      if(tasksStart == null || tasksStart > task['start']) { tasksStart = task['start'] };
+      if(tasksEnd == null ||tasksEnd < task['complete']) { tasksEnd = task['complete'] };
+      ci_plot_data.push(
+        {
+          name: "Task " + task["task_id"],
+          x: [task['start'], task['complete']], y: [task['%cpu'], task['%cpu']],
+          type: 'scatter',  fill: 'tozeroy', mode: 'none', yaxis: 'y2',
+        }
+      );
+    }
+
+    // Make layout
+    var ci_layout = {
+      title: 'Carbon intensity index',
+      legend: {
+        x: 1.1
+      },
+      xaxis: {
+        title: 'Time',
+        ticklabelstandoff: 10,
+        overlay: 'x2',
+        range: [tasksStart, tasksEnd],
+      },
+      yaxis: {
+        title: 'Carbon Intensity (g/kWh)',
+        rangemode: 'tozero',
+      },
+      yaxis2: {
+       title: 'CPU usage (%)',
+       rangemode: 'tozero',
+       gridcolor: 'rgba(0, 0, 0, 0)', // transparent grid lines
+       overlaying: 'y',
+       side: 'right',
+      }
+    };
+
+    Plotly.newPlot('ci-plot', ci_plot_data, ci_layout)
+  }
+
+
+  //
+  // Table creation functions
+  //
 
       /**
        * Function to create the table of tasks
