Refactor: Renamed to `marketCi`
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -172,31 +172,31 @@
           </summary>
           <div class="d-flex flex-wrap mt-4 mb-5" style="gap: 1.5rem; margin-left: -0.75rem; margin-right: -0.75rem;">
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-              <span class="metric">${co2_totals.co2e_personalEnergyMix}</span>
+              <span class="metric">${co2_totals.co2e_market}</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m19.21 12.04l-1.53-.11l-.3-1.5A5.484 5.484 0 0 0 12 6C9.94 6 8.08 7.14 7.12 8.96l-.5.95l-1.07.11A3.99 3.99 0 0 0 2 14c0 2.21 1.79 4 4 4h13c1.65 0 3-1.35 3-3c0-1.55-1.22-2.86-2.79-2.96z" opacity=".3"/><path fill="currentColor" d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5c0-2.64-2.05-4.78-4.65-4.96zM19 18H6c-2.21 0-4-1.79-4-4c0-2.05 1.53-3.76 3.56-3.97l1.07-.11l.5-.95A5.469 5.469 0 0 1 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5l1.53.11A2.98 2.98 0 0 1 22 15c0 1.65-1.35 3-3 3z"/></svg>
               <span class="metric-title">CO<sub>2</sub>e emissions</span>
             </div>
 
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-              <span class="metric" style="color:#808080">${co2_totals.energy_personalEnergyMix}</span>
+              <span class="metric" style="color:#808080">${co2_totals.energy_market}</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><mask id="ipSEnergySocket0"><g fill="none" stroke="#D3D3D3" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"><path d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Zm4-23v-5m-8 5v-5"/><path fill="#D3D3D3" d="M24 32a8 8 0 0 0 8-8v-3H16v3a8 8 0 0 0 8 8Z"/><path d="M24 44V32"/></g></mask><path fill="#D3D3D3" d="M0 0h48v48H0z" mask="url(#ipSEnergySocket0)"/></svg>
               <span class="metric-title" style="color:#808080">Energy consumption</span>
             </div>
 
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-              <span class="metric">${co2_totals.tree_personalEnergyMix}</span>
+              <span class="metric">${co2_totals.tree_market}</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M378.31 378.49L298.42 288h30.63c9.01 0 16.98-5 20.78-13.06c3.8-8.04 2.55-17.26-3.28-24.05L268.42 160h28.89c9.1 0 17.3-5.35 20.86-13.61c3.52-8.13 1.86-17.59-4.24-24.08L203.66 4.83c-6.03-6.45-17.28-6.45-23.32 0L70.06 122.31c-6.1 6.49-7.75 15.95-4.24 24.08C69.38 154.65 77.59 160 86.69 160h28.89l-78.14 90.91c-5.81 6.78-7.06 15.99-3.27 24.04C37.97 283 45.93 288 54.95 288h30.63L5.69 378.49c-6 6.79-7.36 16.09-3.56 24.26c3.75 8.05 12 13.25 21.01 13.25H160v24.45l-30.29 48.4c-5.32 10.64 2.42 23.16 14.31 23.16h95.96c11.89 0 19.63-12.52 14.31-23.16L224 440.45V416h136.86c9.01 0 17.26-5.2 21.01-13.25c3.8-8.17 2.44-17.47-3.56-24.26z"/></svg>
               <span class="metric-title">Tree sequestration time</span>
             </div>
 
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-              <span class="metric">${co2_totals.car_personalEnergyMix}</span>
+              <span class="metric">${co2_totals.car_market}</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m5 11l1.5-4.5h11L19 11m-1.5 5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5m-11 0A1.5 1.5 0 0 1 5 14.5A1.5 1.5 0 0 1 6.5 13A1.5 1.5 0 0 1 8 14.5A1.5 1.5 0 0 1 6.5 16M18.92 6c-.2-.58-.76-1-1.42-1h-11c-.66 0-1.22.42-1.42 1L3 12v8a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-1h12v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-8l-2.08-6Z"/></svg>
               <span class="metric-title">km by car</span>
             </div>
 
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-              <span class="metric">${co2_totals.plane_flights_personalEnergyMix ?: co2_totals.plane_percent_non_cached ?: '0.0 %'}</span>
+              <span class="metric">${co2_totals.plane_flights_market ?: co2_totals.plane_percent_market ?: '0.0 %'}</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M20.56 3.91c.59.59.59 1.54 0 2.12l-3.89 3.89l2.12 9.19l-1.41 1.42l-3.88-7.43L9.6 17l.36 2.47l-1.07 1.06l-1.76-3.18l-3.19-1.77L5 14.5l2.5.37L11.37 11L3.94 7.09l1.42-1.41l9.19 2.12l3.89-3.89c.56-.58 1.56-.58 2.12 0Z"/></svg>
               <span class="metric-title">Flight Paris - London</span>
             </div>
