--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -165,10 +165,10 @@
         </div>
       </details>
 
-      <% if (co2_totals['co2e_personalEnergyMix']) { %>
+      <% if (co2_totals['co2e_market']) { %>
         <details class="mt-5">
           <summary style="cursor: pointer;">
-            <span style="padding: 3px; border-radius: 10px; border: 2px solid #58bd9f; font-weight: bold">With custom personal energy mix:</span>
+            <span style="padding: 3px; border-radius: 10px; border: 2px solid #58bd9f; font-weight: bold">With market-based energy mix:</span>
           </summary>
           <div class="d-flex flex-wrap mt-4 mb-5" style="gap: 1.5rem; margin-left: -0.75rem; margin-right: -0.75rem;">
             <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
