Documentation: Added citation for WikiChip to report
Test: Adjusted report test
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -368,6 +368,18 @@ footer a {
             </span>
           </li>
           <li>
+            The CPU specifications used in the calculation are based on data from
+            <a href="https://en.wikichip.org/wiki/WikiChip" target="_blank" rel="noopener" style="color: #17a2b8">WikiChip</a>
+            accessed via their API, under the
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0) license</a>.
+            <span class="font-italic small">
+              WikiChip LLC (2025). CPU data including thermal design power (TDP) (Version June 20, 2025). WikiChip.
+              <a href="https://en.wikichip.org/wiki/WikiChip" target="_blank" rel="noopener">
+                https://en.wikichip.org/wiki/WikiChip
+              </a>
+            </span>
+          </li>
+          <li>
             
               The carbon intensity (CI) values used in the calculation originate from
               <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">Electricity Maps</a>
