Test: Adjusted report Tests
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -298,26 +298,26 @@ footer a {
           </div>
 
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-            <span class="metric">3h 40min 30.72s</span>
+            <span class="metric">5h 12min 19.21s</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M378.31 378.49L298.42 288h30.63c9.01 0 16.98-5 20.78-13.06c3.8-8.04 2.55-17.26-3.28-24.05L268.42 160h28.89c9.1 0 17.3-5.35 20.86-13.61c3.52-8.13 1.86-17.59-4.24-24.08L203.66 4.83c-6.03-6.45-17.28-6.45-23.32 0L70.06 122.31c-6.1 6.49-7.75 15.95-4.24 24.08C69.38 154.65 77.59 160 86.69 160h28.89l-78.14 90.91c-5.81 6.78-7.06 15.99-3.27 24.04C37.97 283 45.93 288 54.95 288h30.63L5.69 378.49c-6 6.79-7.36 16.09-3.56 24.26c3.75 8.05 12 13.25 21.01 13.25H160v24.45l-30.29 48.4c-5.32 10.64 2.42 23.16 14.31 23.16h95.96c11.89 0 19.63-12.52 14.31-23.16L224 440.45V416h136.86c9.01 0 17.26-5.2 21.01-13.25c3.8-8.17 2.44-17.47-3.56-24.26z"/></svg>
             <span class="metric-title">Tree sequestration time</span>
           </div>
 
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-            <span class="metric">0.026</span>
+            <span class="metric">0.037</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m5 11l1.5-4.5h11L19 11m-1.5 5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5m-11 0A1.5 1.5 0 0 1 5 14.5A1.5 1.5 0 0 1 6.5 13A1.5 1.5 0 0 1 8 14.5A1.5 1.5 0 0 1 6.5 16M18.92 6c-.2-.58-.76-1-1.42-1h-11c-.66 0-1.22.42-1.42 1L3 12v8a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-1h12v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-8l-2.08-6Z"/></svg>
             <span class="metric-title">km by car</span>
           </div>
 
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-            <span class="metric">0.009 %</span>
+            <span class="metric">0.013 %</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M20.56 3.91c.59.59.59 1.54 0 2.12l-3.89 3.89l2.12 9.19l-1.41 1.42l-3.88-7.43L9.6 17l.36 2.47l-1.07 1.06l-1.76-3.18l-3.19-1.77L5 14.5l2.5.37L11.37 11L3.94 7.09l1.42-1.41l9.19 2.12l3.89-3.89c.56-.58 1.56-.58 2.12 0Z"/></svg>
             <span class="metric-title">Flight Paris - London</span>
           </div>
         </div>
       </details>
 
-
+      
 
     </div>
   </div>
@@ -1289,7 +1289,7 @@ $(function() {
 });
 
   // Nextflow report data
-  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"13607.5","co2e":"6531.6","co2eMarket":"-","time":"1.0","ci":"480.0","ciMarket":"-","cpus":"1","powerdrawCPU":"11.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5},"co2e_non_cached":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy_non_cached":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5,"co2e_market":{},"energy_market":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5}}}};
+  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"13607.5","co2e":"6531.6","co2eMarket":"-","time":"1.0","ci":"480.0","ciMarket":"-","cpus":"1","powerdrawCPU":"11.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5},"co2e_non_cached":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy_non_cached":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5},"co2e_market":{},"energy_market":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5}}}};
   window.options = [{"option":"ci","value":"480.0"},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir4317663209722694476/report_test.html"},{"option":"summaryFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir4317663209722694476/summary_test.txt"},{"option":"traceFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir4317663209722694476/trace_test.txt"}];
 
   </script>
