--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -201,6 +201,19 @@
               <span class="metric-title">Flight Paris - London</span>
             </div>
           </div>
+
+          <div class="container my-5">
+            <div class="card shadow-sm">
+              <div class="card-body" style="background-color: #ebf1f3">
+                <h5>ℹ️ Info</h5>
+                We encourage the reporting of emission values by location instead of marked-based carbon intensities.
+                The energy is still drawn from a finite pool of renewables, currently available to your grid.
+                It would likely be utilized for another buyer, regardless of the contract.
+                This is not to say that these contracts are without merit, but the short-term differences are limited.
+              </div>
+            </div>
+          </div>
+
         </details>
       <% } %>
 
