--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -946,9 +946,120 @@
         });
       }
 
-      // Executor for options table creation (on page load)
-      make_options_table();
-    });
+  // Executor for options table creation (on page load)
+  make_options_table();
+
+  //
+  // Carbon intensity plot
+  //
+
+  function make_ci_plot() {
+    var ci_plot_data = []
+
+    // Tasks:
+    // Collect all time boundaries
+    const timePoints = new Set()
+    for (const task of window.data.trace) {
+      timePoints.add(task["start"])
+      timePoints.add(task["complete"])
+    }
+    const sortedTimes = Array.from(timePoints).sort()
+
+    // Define first and last point
+    var tasksStart = sortedTimes[0]
+    var tasksEnd = sortedTimes[sortedTimes.length - 1]
+
+    // For each subinterval, calculate the total energy from active intervals
+    // Add first point to energy trace
+    const timeSteps = [tasksStart], totalEnergy = [0.0]
+    // Add intermediate points to energy trace
+    for (let i = 0; i < sortedTimes.length - 1; i++) {
+      const t0 = sortedTimes[i]
+      const t1 = sortedTimes[i + 1]
+
+      // Sum energy of intervals active in [t0, t1)
+      let total = 0
+      for (const task of window.data.trace) {
+        if (task["start"] <= t0 && task["complete"] > t0) {
+          total += task["energy"]
+        }
+      }
+
+      timeSteps.push(t0, t1)
+      totalEnergy.push(total, total)
+    }
+    // Add last point to energy trace
+    timeSteps.push(tasksEnd)
+    totalEnergy.push(0.0)
+
+    // CI values:
+    if (window.timeCiRecords.size == 0) {
+          window.timeCiRecords.set(tasksStart, window.data.trace[0]["ci"])
+          window.timeCiRecords.set(tasksEnd, window.data.trace[0]["ci"])
+    }
+    else {
+      const arr = Array.from( window.timeCiRecords.values() )
+      window.timeCiRecords.set(tasksStart, arr[0])
+      window.timeCiRecords.set(tasksEnd, arr[arr.length - 1])
+    }
+
+    const timeCiRecords = new Map([...window.timeCiRecords].sort())
+    var timestamps = Array.from( timeCiRecords.keys() )
+    var ciValues = Array.from( timeCiRecords.values() )
+
+    // Add CI trace to plot
+    ci_plot_data.push(
+      {
+        name: "Carbon intensity",
+        x: timestamps, y: ciValues,
+        type: "scatter",
+        line: { color: "grey" },
+        marker: { color: "grey" },
+      }
+    )
+
+    // Add energy trace to plot
+    ci_plot_data.push(
+      {
+        name:"Energy consumption",
+        x: timeSteps, y: totalEnergy,
+        type: "scatter", fill: "tozeroy", yaxis: "y2",
+        line: { color: "#FFCC00", shape: "hv"  },
+      }
+    )
+
+    // Layout:
+    var ci_layout = {
+      title: 'Carbon intensity index',
+      legend: {
+        x: 1.1
+      },
+      xaxis: {
+        title: 'Time',
+        ticklabelstandoff: 10,
+        overlay: 'x2',
+        range: [tasksStart, tasksEnd],
+      },
+      yaxis: {
+        title: 'Carbon Intensity (g/kWh)',
+        rangemode: 'tozero',
+      },
+      yaxis2: {
+        title: 'Energy consumption (kWh)',
+        rangemode: 'tozero',
+        gridcolor: 'rgba(0, 0, 0, 0)', // transparent grid lines
+        overlaying: 'y',
+        side: 'right',
+      }
+    }
+
+    // Create plot:
+    Plotly.newPlot('ci-plot', ci_plot_data, ci_layout)
+  }
+
+  // Executor for ci plot generation
+  make_ci_plot()
+});
 
     // Nextflow report data
     window.data = {"trace":[{"task_id":{"raw":"111","readable":"111"},"process":{"raw":"observerTestProcess","readable":"observerTestProcess"},"realtime":{"raw":3600000,"readable":"1h"},"cpus":{"raw":1,"readable":"1"},"cpu_model":{"raw":"Unknown model","readable":"Unknown model"},"%cpu":{"raw":100.0,"readable":"100.0%"},"memory":{"raw":7,"readable":"7 GB"},"status":{"raw":"COMPLETED","readable":"<span class=\"badge badge-success\">COMPLETED</span>"},"hash":{"raw":null,"readable":"-"},"native_id":{"raw":null,"readable":"-"},"module":{"raw":null,"readable":"-"},"container":{"raw":null,"readable":"-"},"tag":{"raw":null,"readable":"-"},"name":{"raw":null,"readable":"-"},"exit":{"raw":null,"readable":"-"},"submit":{"raw":null,"readable":"-"},"start":{"raw":null,"readable":"-"},"complete":{"raw":null,"readable":"-"},"duration":{"raw":null,"readable":"-"},"%mem":{"raw":null,"readable":"-"},"rss":{"raw":null,"readable":"-"},"vmem":{"raw":null,"readable":"-"},"peak_rss":{"raw":null,"readable":"-"},"peak_vmem":{"raw":null,"readable":"-"},"rchar":{"raw":null,"readable":"-"},"wchar":{"raw":null,"readable":"-"},"syscr":{"raw":null,"readable":"-"},"syscw":{"raw":null,"readable":"-"},"read_bytes":{"raw":null,"readable":"-"},"write_bytes":{"raw":null,"readable":"-"},"attempt":{"raw":null,"readable":"-"},"workdir":{"raw":null,"readable":"-"},"script":{"raw":null,"readable":"-"},"scratch":{"raw":null,"readable":"-"},"queue":{"raw":null,"readable":"-"},"disk":{"raw":null,"readable":"-"},"time":{"raw":1.0,"readable":"3600s"},"env":{"raw":null,"readable":"-"},"error_action":{"raw":null,"readable":"-"},"vol_ctxt":{"raw":null,"readable":"-"},"inv_ctxt":{"raw":null,"readable":"-"},"hostname":{"raw":null,"readable":"-"},"energy":{"raw":0.0140575,"readable":"14.06 Wh"},"co2e":{"raw":6.7476,"readable":"6.75 g"},"co2eMarket":{"raw":null,"readable":"-"},"ci":{"raw":480.0,"readable":"480 gCO\u2082e/kWh"},"powerdrawCPU":{"raw":11.45,"readable":"11.45 W"},"cpuUsage":{"raw":100.0,"readable":"100 %"}}],"summary":{"observerTestProcess":{"co2e":{"all":[6.7476],"total":6.7476,"mean":6.7476,"minLabel":null,"min":6.7476,"q1Label":null,"q1":6.7476,"q2Label":null,"q2":6.7476,"q3Label":null,"q3":6.7476,"maxLabel":null,"max":6.7476},"energy":{"all":[0.0140575],"total":0.0140575,"mean":0.0140575,"minLabel":null,"min":0.0140575,"q1Label":null,"q1":0.0140575,"q2Label":null,"q2":0.0140575,"q3Label":null,"q3":0.0140575,"maxLabel":null,"max":0.0140575},"co2e_non_cached":{"all":[6.7476],"total":6.7476,"mean":6.7476,"minLabel":null,"min":6.7476,"q1Label":null,"q1":6.7476,"q2Label":null,"q2":6.7476,"q3Label":null,"q3":6.7476,"maxLabel":null,"max":6.7476},"energy_non_cached":{"all":[0.0140575],"total":0.0140575,"mean":0.0140575,"minLabel":null,"min":0.0140575,"q1Label":null,"q1":0.0140575,"q2Label":null,"q2":0.0140575,"q3Label":null,"q3":0.0140575,"maxLabel":null,"max":0.0140575},"co2e_market":{},"energy_market":{"all":[0.0140575],"total":0.0140575,"mean":0.0140575,"minLabel":null,"min":0.0140575,"q1Label":null,"q1":0.0140575,"q2Label":null,"q2":0.0140575,"q3Label":null,"q3":0.0140575,"maxLabel":null,"max":0.0140575}}}};
