Improve styling of collapsible element
Signed-off-by: nadnein <nadjav.18@gmail.com>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -282,8 +282,18 @@ footer a {
 
       <details class="mt-5">
         <summary style="cursor: pointer;">
-          <span style="padding: 3px; border-radius: 10px; border: 2px solid #58bd9f; font-weight: bold">Without cached tasks:</span>
-        </summary>
+          <span style="
+            padding: 6px 12px;
+            border-radius: 8px;
+            border: 2px solid #badbcc;
+            background-color: #d1e7dd;
+            font-weight: bold;
+            color: #0f5132;
+            display: inline-block;
+          ">
+            Without cached tasks:
+          </span>
+        </summary>         
         <div class="d-flex flex-wrap mt-4 mb-5" style="gap: 1.5rem; margin-left: -0.75rem; margin-right: -0.75rem;">
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
             <span class="metric">6.53 g</span>
