Refactor: Changed style info box
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -205,11 +205,11 @@
           </div>
 
           <div class="container my-5">
-            <div class="card shadow-sm">
-              <div class="card-body" style="background-color: #ebf1f3">
-                <h5>ℹ️ Info</h5>
-                We encourage the reporting of emission values by location instead of marked-based carbon intensities.
-                The energy is still drawn from a finite pool of renewables, currently available to your grid.
+            <div class="alert alert-info">
+              <div class="mb-2"><strong>ℹ️ Info</strong></div>
+              <div>
+                We encourage the reporting of emission values by location instead of market-based carbon intensities.
+                The energy is still drawn from a finite pool of renewables currently available to your grid.
                 It would likely be utilized for another buyer, regardless of the contract.
                 This is not to say that these contracts are without merit, but the short-term differences are limited.
               </div>
