Chore: Bumped version to 1.0.0-rc.1
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -270,7 +270,7 @@ summary {
         <dd>version 24.10.6, build 5937 (23-04-2025 16:53 UTC)</dd>
 
         <dt>nf-co2footprint plugin version</dt>
-        <dd>version 1.0.0-rc</dd>
+        <dd>version 1.0.0-rc.1</dd>
       </dl>
 
       <h3 class="mt-5">Total CO<sub>2</sub>e footprint measures</h3>
