--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -56,7 +56,7 @@
   <div class="jumbotron mb-0">
     <div class="container">
 
-      <h1 class="display-3">Nextflow CO<sub>2</sub>e footprint report</h1>
+      <h1 class="display-3">Nextflow CO<sub>2</sub>e Footprint Report</h1>
       <h2 class="text-muted mb-4"><samp>[${workflow.runName}]</samp> ${workflow.resume ? '<em>(resumed run)</em>' : ''}</h2>
 
       <% if ( workflow.success && workflow.stats.ignoredCount ){ %>
@@ -95,7 +95,7 @@
         <dd>version ${plugin_version}</dd>
       </dl>
 
-      <h3 class="mt-5">Total CO<sub>2</sub>e footprint measures</h3>
+      <h3 class="mt-5">Total CO<sub>2</sub>e Footprint Measures</h3>
       <div class="card-wrap d-flex flex-wrap mt-4 mb-5">
         <div class="metric-card card p-1">
           <span class="metric">${co2_totals.co2e}</span>
@@ -223,9 +223,8 @@
   </div>
 
   <div class="container">
-    <h2 id="resources" style="padding-top: 40px;">CO<sub>2</sub>e Footprint Measures</h2>
-
-    <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
+    <h2 id="resources" style="padding-top: 20px;" class="mb-3">CO<sub>2</sub>e Footprint Measures</h2>
+    <ul class="nav nav-tabs mb-3" id="co2eplot_tabs" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="co2e-total-plot_tablink" data-toggle="tab" href="#co2e-total-plot_tabpanel" role="tab" aria-controls="co2e-total-plot_tabpanel" aria-expanded="false">
           All tasks
@@ -245,12 +244,11 @@
         <div id="co2e-non-cached-plot"></div>
       </div>
     </div>
-
     <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
   </div>
 
   <div class="container">
-    <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
+    <h2 id="tasks" style="padding-top: 20px;">Tasks</h2>
     <div id="tasks-present-table" class="mb-3">
       <form class="form-inline" id="nf-form-humanreadable">
         <label class="mr-sm-2" for="nf-table-humanreadable">Values shown as:</label>
@@ -274,7 +272,7 @@
   <div class="container my-5">
     <div class="card shadow-sm">
       <div class="card-body">
-        <h2 id="attribution-and-references" class="h4 mb-4">Data Attribution &amp; References</h2>
+        <h2 id="attribution-and-references" style="padding-top: 20px;">Data Attribution &amp; References</h2>
         <ul class="pl-3 mb-0">
           <li class="mb-3">
             The calculation of these values is based on the carbon footprint computation method
@@ -340,7 +338,7 @@
 
   <div class="container">
     <div id="options-table">
-      <h2 id="options" style="padding-top: 40px;">Options</h2>
+      <h2 id="options" style="padding-top: 20px;">Options</h2>
       <p class="mt-3 mb-3">This table shows the nf-co2footprint plugin options that were used to calculate the CO<sub>2</sub>e footprint measures.</p>
     </div>
     <div class="container-fluid">
