--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -242,7 +242,7 @@ summary {
   <div class="jumbotron mb-0">
     <div class="container">
 
-      <h1 class="display-3">Nextflow CO<sub>2</sub>e footprint report</h1>
+      <h1 class="display-3">Nextflow CO<sub>2</sub>e Footprint Report</h1>
       <h2 class="text-muted mb-4"><samp>[null]</samp> </h2>
 
       
@@ -257,7 +257,7 @@ summary {
       <dl>
         <dt>Run times</dt>
         <dd>
-          <span id="workflow_start">09-Jul-2025 13:39:13</span> - <span id="workflow_complete">09-Jul-2025 13:39:13</span>
+          <span id="workflow_start">06-Aug-2025 11:39:06</span> - <span id="workflow_complete">06-Aug-2025 11:39:06</span>
           (<span id="completed_fromnow"></span>duration: <strong>null</strong>)
         </dd>
 
@@ -273,7 +273,7 @@ summary {
         <dd>version 1.0.0-rc.3</dd>
       </dl>
 
-      <h3 class="mt-5">Total CO<sub>2</sub>e footprint measures</h3>
+      <h3 class="mt-5">Total CO<sub>2</sub>e Footprint Measures</h3>
       <div class="card-wrap d-flex flex-wrap mt-4 mb-5">
         <div class="metric-card card p-1">
           <span class="metric">6.53 g</span>
@@ -351,9 +351,8 @@ summary {
   </div>
 
   <div class="container">
-    <h2 id="resources" style="padding-top: 40px;">CO<sub>2</sub>e Footprint Measures</h2>
-
-    <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
+    <h2 id="resources" style="padding-top: 20px;" class="mb-3">CO<sub>2</sub>e Footprint Measures</h2>
+    <ul class="nav nav-tabs mb-3" id="co2eplot_tabs" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="co2e-total-plot_tablink" data-toggle="tab" href="#co2e-total-plot_tabpanel" role="tab" aria-controls="co2e-total-plot_tabpanel" aria-expanded="false">
           All tasks
@@ -373,12 +372,11 @@ summary {
         <div id="co2e-non-cached-plot"></div>
       </div>
     </div>
-
     <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
   </div>
 
   <div class="container">
-    <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
+    <h2 id="tasks" style="padding-top: 20px;">Tasks</h2>
     <div id="tasks-present-table" class="mb-3">
       <form class="form-inline" id="nf-form-humanreadable">
         <label class="mr-sm-2" for="nf-table-humanreadable">Values shown as:</label>
@@ -402,7 +400,7 @@ summary {
   <div class="container my-5">
     <div class="card shadow-sm">
       <div class="card-body">
-        <h2 id="attribution-and-references" class="h4 mb-4">Data Attribution &amp; References</h2>
+        <h2 id="attribution-and-references" style="padding-top: 20px;">Data Attribution &amp; References</h2>
         <ul class="pl-3 mb-0">
           <li class="mb-3">
             The calculation of these values is based on the carbon footprint computation method
@@ -450,7 +448,7 @@ summary {
 
   <div class="container">
     <div id="options-table">
-      <h2 id="options" style="padding-top: 40px;">Options</h2>
+      <h2 id="options" style="padding-top: 20px;">Options</h2>
       <p class="mt-3 mb-3">This table shows the nf-co2footprint plugin options that were used to calculate the CO<sub>2</sub>e footprint measures.</p>
     </div>
     <div class="container-fluid">
@@ -854,14 +852,15 @@ function toReadableUnits(value, scope = '', unit = '') {
 
 
 /**
- * Convert bytes to readable units
+ * Convert bytes to readable units, starting from a specified unit.
  *
- * @param {*} value Bytes to be converted to readable scope
+ * @param {*} value The value to be converted (e.g., 1, 1024, etc.)
+ * @param {string} currentUnit The unit of the input value (default: 'B')
  * @returns Bytes in a readable scope
  */
-function toReadableByteUnits(value){
-  units = ['B', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB']  // Units: Byte, Kilobyte, Megabyte, Gigabyte, Terabyte, Petabyte, Exabyte
-  unit_index=0
+function toReadableByteUnits(value, currentUnit = 'B') {
+  var units = ['B', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB']; // Units: Byte, Kilobyte, Megabyte, etc.
+  var unit_index = units.indexOf(currentUnit);
 
   while (value >= 1024 && unit_index < units.length - 1) {
     value /= 1024;
@@ -906,57 +905,56 @@ function convertTime(value, unit='ms', targetUnit='s') {
  * @param {*} smallestUnit The smallest unit to convert to
  * @param {*} largestUnit The largest unit to convert to
  * @param {*} threshold The minimum value for the conversion to be included in the output
- * @param {*} numSteps The maximum number of conversion steps to perform
- * @param {*} readableString The string to append the result to
  * @return A human-readable string representation of the time value
  */
-function toReadableTimeUnits(value, unit='ms', smallestUnit='s', largestUnit='years', threshold=0.0, numSteps=null, readableString='') {
-  // Ordered list of supported time units
-  var units = ['ns', 'mus', 'ms', 's', 'min', 'h', 'days', 'weeks', 'months', 'years']
+function toReadableTimeUnits(value, unit = 'ms', smallestUnit = 's', largestUnit = 'years', threshold = null) {
+  const units = ['ns', 'mus', 'ms', 's', 'min', 'h', 'days', 'weeks', 'months', 'years'];
+  const steps = [1000, 1000, 1000, 60, 60, 24, 7, 4.35, 12];
 
-  // Calculate the number of conversion steps left
-  var smallestIdx = units.indexOf(smallestUnit)
-  var largestIdx = units.indexOf(largestUnit)
-  numSteps = (numSteps == null) ? (largestIdx - smallestIdx) : (numSteps - 1)
+  const smallestIdx = units.indexOf(smallestUnit);
+  const largestIdx = units.indexOf(largestUnit);
+  if (smallestIdx === -1 || largestIdx === -1) throw new Error("Unknown unit");
 
-  // Convert value to the current target unit
-  var targetUnit = largestUnit
-  var targetValue = convertTime(value, unit, targetUnit)
-  var targetValueFormatted = Math.floor(targetValue)
+  let remaining = convertTime(value, unit, units[largestIdx]);
+  let parts = [];
 
-  // Singularize unit if value is exactly 1 and unit is plural
-  if (targetValueFormatted == 1 && ['days', 'weeks', 'months', 'years'].includes(targetUnit)) {
-    targetUnit = targetUnit.slice(0, -1) // e.g. "days" -> "day"
+  for (let i = largestIdx; i >= smallestIdx; i--) {
+    let unitValue;
+    if (i > smallestIdx) {
+      unitValue = Math.floor(remaining);
+      remaining = (remaining - unitValue) * steps[i - 1];
+    } else {
+      // For the smallest unit, keep up to 2 decimals
+      unitValue = Math.round(remaining * 100) / 100;
+      remaining = 0;
+    }
+
+    if ((threshold === null && unitValue > 0) || (threshold !== null && unitValue > threshold)) {
+      let label = (unitValue === 1 && ['days', 'weeks', 'months', 'years'].includes(units[i]))
+        ? units[i].slice(0, -1)
+        : units[i];
+      let formatted = parseFloat(unitValue).toString();
+      parts.push(`${formatted}${label}`);
+    }
   }
 
-  // If this is the last step, use the remaining value as is
-  if (numSteps == 0) {
-    targetValueFormatted = targetValue
+  // Carry-over: if the last unit is exactly the conversion factor, increment previous unit
+  if (parts.length && smallestIdx > 0) {
+    let lastPart = parts[parts.length - 1];
+    let lastValue = parseFloat(lastPart.replace(/[^\d.]/g, ''));
+    let lastUnit = lastPart.replace(/[\d.]/g, '');
+    let conversionFactor = steps[smallestIdx - 1];
+    if (lastValue === conversionFactor) {
+      parts.pop();
+      let prevPart = parts[parts.length - 1];
+      let prevNum = parseFloat(prevPart.replace(/[^\d.]/g, ''));
+      let prevUnit = prevPart.replace(/[\d.]/g, '');
+      let newPrev = prevNum + 1;
+      parts[parts.length - 1] = `${parseFloat(newPrev).toString()}${prevUnit}`;
+    }
   }
 
-  // Only add to output if above threshold or no threshold set
-  if (threshold == null || targetValueFormatted > threshold) {
-    value = targetValue - targetValueFormatted
-    unit = largestUnit
-
-    // Format to 2 decimals, remove trailing zeros
-    var formattedValue = targetValueFormatted.toFixed(2)
-    readableString += readableString ? ' ' + formattedValue + targetUnit : formattedValue + targetUnit
-  }
-
-  // If we've reached the smallest unit or max steps, return the result
-  if (numSteps == 0) {
-    var result = readableString.trim()
-    return result ? result : '0' + smallestUnit
-  }
-
-  // Otherwise, continue with the next smaller unit
-  var nextLargestUnit = units[largestIdx - 1]
-  return toReadableTimeUnits(
-    value, unit,
-    smallestUnit, nextLargestUnit,
-    threshold, numSteps, readableString
-  )
+  return parts.length ? parts.join(' ') : `0${smallestUnit}`;
 }
 
 //
@@ -1009,12 +1007,12 @@ function make_energy(mWh, type){
 /**
  * Render time in desired output format
  *
- * @param {*} ms Time in milliseconds
+ * @param {*} h Time in hours
  * @param {*} type Type of the data
  * @returns The readable time
  */
-function make_time(ms, type){
-  return check_data(data, type, parseInt) ?? toReadableTimeUnits(parseFloat(ms), 'ms', 'ns');
+function make_time(h, type){
+  return check_data(data, type, parseFloat) ?? toReadableTimeUnits(parseFloat(h), 'h', 'ms', 'days', 0.0);
 }
 
 /**
@@ -1025,18 +1023,30 @@ function make_time(ms, type){
  * @returns Carbon intensity as a readable unit
  */
 function make_carbon_intensity(ci, type) {
-  return check_data(data, type, parseFloat) ?? toReadableUnits(ci, 'm', 'gCO<sub>2</sub>eq/kWh');
+  return check_data(data, type, parseFloat) ?? toReadableUnits(ci, 'm', 'gCO<sub>2</sub>e/kWh');
 }
 
 /**
  * Render memory size in desired output format
  *
- * @param {*} bytes Number of bytes
+ * @param {*} value Memory value to be rendered
  * @param {*} type Type of the data
- * @returns The bytes at a readable scale
+ * @param {string} unit The unit of the input value (default: 'B')
+ * @returns The memory at a readable scale
  */
-function make_memory(bytes, type){
-  return check_data(bytes, type, parseInt) ?? toReadableByteUnits(bytes);
+function make_memory(value, type) {
+  return check_data(value, type, parseFloat) ?? toReadableByteUnits(value, 'GB');
+}
+
+/**
+ * Render the per core power draw in desired output format
+ *
+ * @param {*} powerDrawCPU Power draw of the CPU in Watts
+ * @param {*} type Type of the data
+ * @returns Readable power draw in Watts
+ */
+function make_power_draw_cpu(powerDrawCPU, type) {
+  return check_data(powerDrawCPU, type, parseFloat) ?? `${powerDrawCPU}%`;
 }
 
 /**
@@ -1044,12 +1054,11 @@ function make_memory(bytes, type){
  *
  * @param {*} usageFactor Usage factor of CPU in percent
  * @param {*} type Type of the data
- * @returns A rounded usage factor
+ * @returns Readable usage factor
  */
 function make_core_usage_factor(usageFactor, type){
-  return check_data(usageFactor, type, parseFloat) ?? Math.round( usageFactor * 1000 ) / 1000;
+  return check_data(usageFactor, type, parseFloat) ?? `${usageFactor} W`;
 }
-
 
 // Map for collecting statistics by process
 window.statsByProcess = {};
@@ -1223,13 +1232,13 @@ $(function() {
           },
           { title: co2EmissionsTitle, data: 'co2e', type: 'num', render: make_co2e },
           { title: energyConsumptionTitle, data: 'energy', type: 'num', render: make_energy },
-          { title: 'Time', data: 'time', type: 'num', render: make_time },
           { title: 'Carbon Intensity', data: 'ci', type: 'num', render: make_carbon_intensity },
-          { title: 'Number of cores', data: 'cpus', type: 'num' },
-          { title: 'Power draw per core', data: 'powerdrawCPU', type: 'num'},
-          { title: 'Core usage factor', data: 'cpuUsage', type: 'num', render: make_core_usage_factor },
-          { title: 'Memory', data: 'memory', type: 'num', render: make_memory },
-          { title: 'CPU model', data: 'cpu_model' },
+          { title: 'realtime', data: 'time', type: 'num', render: make_time },
+          { title: 'allocated cpus', data: 'cpus', type: 'num' },
+          { title: 'power draw per core', data: 'powerdrawCPU', type: 'num', render: make_power_draw_cpu },
+          { title: '%cpu', data: 'cpuUsage', type: 'num', render: make_core_usage_factor },
+          { title: 'allocated memory', data: 'memory', type: 'num', render: make_memory },
+          { title: 'cpu model', data: 'cpu_model' },
         ],
         "deferRender": true,
         "lengthMenu": [[25, 50, 100, -1], [25, 50, 100, "All"]],
@@ -1318,7 +1327,7 @@ $(function() {
 
   // Nextflow report data
   window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"13607.5","co2e":"6531.6","co2eMarket":"-","time":"1.0","ci":"480.0","ciMarket":"-","cpus":"1","powerdrawCPU":"11.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5},"co2e_non_cached":{"all":[6531.6],"total":6531.6,"mean":6531.6,"minLabel":null,"min":6531.6,"q1Label":null,"q1":6531.6,"q2Label":null,"q2":6531.6,"q3Label":null,"q3":6531.6,"maxLabel":null,"max":6531.6},"energy_non_cached":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5},"co2e_market":{},"energy_market":{"all":[13607.5],"total":13607.5,"mean":13607.5,"minLabel":null,"min":13607.5,"q1Label":null,"q1":13607.5,"q2Label":null,"q2":13607.5,"q3Label":null,"q3":13607.5,"maxLabel":null,"max":13607.5}}}};
-  window.options = [{"option":"ci","value":"480.0"},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir9004612121553230788/report_test.html"},{"option":"summaryFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir9004612121553230788/summary_test.txt"},{"option":"traceFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir9004612121553230788/trace_test.txt"}];
+  window.options = [{"option":"ci","value":"480.0"},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir16206181382339314774/report_test.html"},{"option":"summaryFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir16206181382339314774/summary_test.txt"},{"option":"traceFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir16206181382339314774/trace_test.txt"}];
 
   </script>
 
